--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0b12">
   <title>Appana AI — Ultra Study Mode</title>
   
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/809/809052.png">
 
@@ -213,6 +213,6 @@
   </aside>
 </div>
 
-<script type="module" src="Script.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
