--- a/index.html
+++ b/index.html
@@ -44,37 +44,28 @@
     </div>
 
     <section class="controls">
+      <button id="install-btn" class="install-btn hidden">📲 Install App</button>
+
       <label>Target Exam / Course
         <select id="subject-selector">
           <optgroup label="School: Class 9 & 10">
-            <option>Class 9 (Maths & Science)</option>
-            <option>Class 9 (Social Studies)</option>
             <option>Class 9 (All Subjects)</option>
-            <option>Class 10 (Maths Standard)</option>
-            <option>Class 10 (Maths Basic)</option>
-            <option>Class 10 (Science)</option>
+            <option>Class 10 (Maths & Science)</option>
             <option>Class 10 (SST & English)</option>
           </optgroup>
-
           <optgroup label="School: Class 11 & 12">
-            <option>Class 11 Science (PCM)</option>
-            <option>Class 11 Science (PCB)</option>
-            <option>Class 11 Science (PCMB)</option>
+            <option>Class 11 Science (PCM/B)</option>
             <option>Class 11 Commerce (With Maths)</option>
             <option>Class 11 Commerce (Without Maths)</option>
-            <option>Class 11 Humanities/Arts</option>
-            <option>Class 12 Science (PCM)</option>
-            <option>Class 12 Science (PCB)</option>
+            <option>Class 11 Arts</option>
+            <option>Class 12 Science (PCM/B)</option>
             <option>Class 12 Commerce</option>
-            <option>Class 12 Humanities/Arts</option>
+            <option>Class 12 Arts</option>
           </optgroup>
-
           <optgroup label="Entrance Exams">
             <option>JEE Mains / Advanced</option>
             <option>NEET (UG)</option>
             <option>CUET (UG)</option>
-            <option>NDA (Defence)</option>
-            <option>CLAT (Law)</option>
             <option>CA Foundation</option>
           </optgroup>
         </select>
@@ -163,7 +154,6 @@
       <button id="pdf-btn" class="full-btn">Download PDF</button>
       <div class="toggles">
         <label><input type="checkbox" id="tts-toggle" checked> Voice Reply</label>
-        <label><input type="checkbox" id="auto-sync-toggle" checked> Auto Sync</label>
       </div>
       <button id="clear-db-btn" class="danger-btn">Reset App</button>
     </section>
