--- a/index.html
+++ b/index.html
@@ -149,11 +149,9 @@
     </div>
 
     <div id="chat-box" class="chat-box">
-      <div class="message ai-message">
-        <div class="msg-text">
-          <strong>🦅 Appana AI:</strong>
-          <p>Welcome! Upload an image/PDF, and I will <b>convert it to text</b> for you.</p>
-        </div>
+      <div id="welcome-msg" class="message ai-message">
+        <strong>🦅 Appana AI:</strong>
+        <p>Welcome! Upload an image/PDF, and I will <b>convert it to text</b> for you.</p>
       </div>
     </div>
 
