--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#0b0b12">
   <title>Appana AI — Study Mentor</title>
   
   <link rel="stylesheet" href="style.css">
@@ -26,16 +26,16 @@
   <aside id="section-menu" class="sidebar">
     <header style="display:flex; align-items:center; gap:12px; margin-bottom: 20px;">
       <div style="font-size:28px;">🦅</div>
-      <div><h1 style="margin:0; font-size:20px;">Appana AI</h1><small style="color:#64748b;">Ultra Indian Techno</small></div>
+      <div><h1 style="margin:0; font-size:20px;">Appana AI</h1><small style="color:#94a3b8;">Ultra Indian Techno</small></div>
     </header>
 
     <div class="motivation-card">
-        <h4 style="color:#a5b4fc; margin-top:0;">🔥 Motivation Boost</h4>
+        <h4 style="color:#e0e7ff; margin-top:0;">🔥 Motivation Boost</h4>
         <div id="sidebar-motivation-text" style="color:white; font-style:italic;">Loading inspiration...</div>
     </div>
 
     <div style="background:#18181b; padding:15px; border-radius:12px; border:1px solid #27272a; margin-bottom:15px;">
-      <div>🏆 Rank: <strong id="user-rank" style="color:#fbbf24">Novice</strong></div>
+      <div>🏆 Rank: <strong id="user-rank" style="color:#d946ef">Novice</strong></div>
       <div>⚡ XP: <strong id="user-xp">0</strong></div>
     </div>
 
@@ -196,7 +196,7 @@
     <h3 style="color:var(--accent); margin-top:0;">Add Custom Subject</h3>
     <input id="custom-sub-name" placeholder="Subject Name">
     <input type="file" id="custom-sub-file" style="margin-top:10px;">
-    <div id="custom-sub-status" style="font-size:12px; color:#fbbf24; margin:5px 0;"></div>
+    <div id="custom-sub-status" style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
     <textarea id="custom-sub-text" placeholder="Content..." style="height:100px; margin-top:5px;"></textarea>
     <div style="display:flex; gap:10px; margin-top:15px;">
         <button id="save-subject-btn" class="primary">Save</button>
