--- a/index.html
+++ b/index.html
@@ -1,57 +1,131 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- =========================
+       BASIC META
+  ========================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
-  <meta name="theme-color" content="#000000"> <title>Appana AI — Study Mentor</title>
-  
+  <meta name="theme-color" content="#0a0b14">
+  <meta name="color-scheme" content="dark light">
+
+  <title>Appana AI — Study Mentor</title>
+  <meta name="description" content="Appana AI is a smart study mentor for Class 11 Commerce students, offering AI-powered explanations, quizzes, notes, and exam-focused guidance.">
+
+  <!-- =========================
+       STYLES
+  ========================== -->
   <link rel="stylesheet" href="global.css">
-  
+
+  <!-- =========================
+       PWA
+  ========================== -->
   <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
+
+  <!-- =========================
+       FONTS
+  ========================== -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
 
+  <!-- =========================
+       LIBRARIES (UNCHANGED)
+  ========================== -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" defer></script>
+
   <script>
-      var pdfjsLib = window['pdfjs-dist/build/pdf'];
-      if(pdfjsLib) pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    const pdfjsLib = window['pdfjs-dist/build/pdf'];
+    if (pdfjsLib) {
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    }
   </script>
 </head>
-<body>
 
-<div id="app" class="app-container">
-  
-  <aside id="section-menu" class="sidebar"></aside>
+<!-- =========================
+     BODY
+     Default: Study Mode
+========================== -->
+<body class="study-mode">
 
-  <main id="section-chat" class="main-area active-panel"></main>
+  <!-- =========================
+       APP CONTAINER
+  ========================== -->
+  <div id="app" class="app-container">
 
-  <aside id="section-tools" class="right-panel"></aside>
+    <!-- LEFT MENU -->
+    <aside id="section-menu" class="sidebar" aria-label="Main menu"></aside>
 
-  <nav id="mobile-nav" class="mobile-nav mobile-only">
-    <button class="nav-btn" data-target="section-menu"><span>☰</span><small>Menu</small></button>
-    <button class="nav-btn active" data-target="section-chat"><span>💬</span><small>Chat</small></button>
-    <button class="nav-btn" data-target="section-tools"><span>⚡</span><small>Tools</small></button>
-  </nav>
+    <!-- MAIN CHAT -->
+    <main id="section-chat" class="main-area active-panel" aria-live="polite"></main>
 
-</div>
+    <!-- TOOLS PANEL -->
+    <aside id="section-tools" class="right-panel" aria-label="Study tools"></aside>
 
-<div id="custom-subject-modal" class="hidden global-modal">
-  <div class="modal-content">
-    <h3 style="color:var(--accent); margin-top:0;">Add Custom Subject</h3>
-    <input id="custom-sub-name" placeholder="Subject Name">
-    <input type="file" id="custom-sub-file" style="margin-top:10px;">
-    <div id="custom-sub-status" style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
-    <textarea id="custom-sub-text" placeholder="Content..." style="height:100px; margin-top:5px;"></textarea>
-    <div style="display:flex; gap:10px; margin-top:15px;">
-        <button id="save-subject-btn" class="primary">Save & Remember</button>
-        <button id="close-modal-btn" style="background:#ef4444;">Cancel</button>
+    <!-- MOBILE NAV -->
+    <nav id="mobile-nav" class="mobile-nav mobile-only" aria-label="Mobile navigation">
+      <button class="nav-btn" data-target="section-menu" aria-label="Open menu">
+        <span>☰</span>
+        <small>Menu</small>
+      </button>
+
+      <button class="nav-btn active" data-target="section-chat" aria-label="Open chat">
+        <span>💬</span>
+        <small>Chat</small>
+      </button>
+
+      <button class="nav-btn" data-target="section-tools" aria-label="Open tools">
+        <span>⚡</span>
+        <small>Tools</small>
+      </button>
+    </nav>
+
+  </div>
+
+  <!-- =========================
+       CUSTOM SUBJECT MODAL
+  ========================== -->
+  <div id="custom-subject-modal" class="hidden global-modal" role="dialog" aria-modal="true">
+    <div class="modal-content">
+      <h3 style="color:var(--accent-blue); margin-top:0;">Add Custom Subject</h3>
+
+      <input id="custom-sub-name" placeholder="Subject Name" aria-label="Subject name">
+
+      <input type="file" id="custom-sub-file" style="margin-top:10px;" aria-label="Upload subject file">
+
+      <div id="custom-sub-status"
+           style="font-size:12px; color:#d946ef; margin:5px 0;">
+      </div>
+
+      <textarea id="custom-sub-text"
+                placeholder="Paste content here..."
+                style="height:100px; margin-top:5px;"
+                aria-label="Subject content">
+      </textarea>
+
+      <div style="display:flex; gap:10px; margin-top:15px;">
+        <button id="save-subject-btn" class="primary">
+          Save & Remember
+        </button>
+
+        <button id="close-modal-btn" style="background:#ef4444;">
+          Cancel
+        </button>
+      </div>
     </div>
   </div>
-</div>
 
-<script type="module" src="main.js"></script>
+  <!-- =========================
+       MAIN SCRIPT
+  ========================== -->
+  <script type="module" src="main.js"></script>
+
 </body>
 </html>
