--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
   <meta name="theme-color" content="#0a0b14">
   <meta name="color-scheme" content="dark light">
 
   <title>Appana AI — Study Mentor</title>
-  <meta name="description" content="Appana AI is a smart study mentor for Class 11 Commerce students, offering AI-powered explanations, quizzes, notes, and exam-focused guidance.">
+  <meta name="description"
+        content="Appana AI is a smart study mentor for Class 11 Commerce students, offering AI-powered explanations, quizzes, notes, and exam-focused guidance.">
 
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="menu.css">
@@ -19,7 +21,6 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
 
@@ -43,60 +44,71 @@
 
     <aside id="section-menu" class="sidebar" aria-label="Main menu"></aside>
 
-    <main id="section-chat" class="main-area active-panel" aria-live="polite"></main>
+    <main id="section-chat"
+          class="main-area active-panel"
+          aria-live="polite"></main>
 
     <aside id="section-tools" class="right-panel" aria-label="Study tools"></aside>
 
     <nav id="mobile-nav" class="mobile-nav mobile-only" aria-label="Mobile navigation">
-      <button class="nav-btn" data-target="section-menu" aria-label="Open menu">
-        <span>☰</span>
-        <small>Menu</small>
+      <button class="nav-btn" data-target="section-menu">
+        <span>☰</span><small>Menu</small>
       </button>
 
-      <button class="nav-btn active" data-target="section-chat" aria-label="Open chat">
-        <span>💬</span>
-        <small>Chat</small>
+      <button class="nav-btn active" data-target="section-chat">
+        <span>💬</span><small>Chat</small>
       </button>
 
-      <button class="nav-btn" data-target="section-tools" aria-label="Open tools">
-        <span>⚡</span>
-        <small>Tools</small>
+      <button class="nav-btn" data-target="section-tools">
+        <span>⚡</span><small>Tools</small>
       </button>
     </nav>
 
   </div>
 
-  <div id="custom-subject-modal" class="hidden global-modal" role="dialog" aria-modal="true">
+  <!-- CUSTOM SUBJECT MODAL -->
+  <div id="custom-subject-modal"
+       class="global-modal hidden"
+       role="dialog"
+       aria-modal="true">
+
     <div class="modal-content">
-      <h3 style="color:var(--accent-blue); margin-top:0;">Add Custom Subject</h3>
+      <h3 style="margin-top:0;">Add Custom Subject</h3>
 
-      <input id="custom-sub-name" placeholder="Subject Name" aria-label="Subject name">
-
-      <input type="file" id="custom-sub-file" style="margin-top:10px;" aria-label="Upload subject file">
+      <input id="custom-sub-name" placeholder="Subject Name">
+      <input type="file" id="custom-sub-file" style="margin-top:10px;">
 
       <div id="custom-sub-status"
-           style="font-size:12px; color:#d946ef; margin:5px 0;">
-      </div>
+           style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
 
       <textarea id="custom-sub-text"
                 placeholder="Paste content here..."
-                style="height:100px; margin-top:5px;"
-                aria-label="Subject content">
-      </textarea>
+                style="height:100px; margin-top:5px;"></textarea>
 
       <div style="display:flex; gap:10px; margin-top:15px;">
-        <button id="save-subject-btn" class="primary">
-          Save & Remember
-        </button>
+        <button id="save-subject-btn" class="primary">Save & Remember</button>
+        <button id="close-modal-btn" style="background:#ef4444;">Cancel</button>
+      </div>
+    </div>
+  </div>
 
-        <button id="close-modal-btn" style="background:#ef4444;">
-          Cancel
-        </button>
+  <!-- LARGE SUBJECT MODAL (same as menu.html) -->
+  <div id="large-subject-modal" class="global-modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-content">
+      <h3 style="margin-top:0;">Add Large Subject</h3>
+
+      <input id="large-sub-name" placeholder="Subject Name">
+      <input type="file" id="large-sub-file" style="margin-top:10px;">
+
+      <div id="large-sub-status" style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
+
+      <div style="display:flex; gap:10px; margin-top:15px;">
+        <button id="save-large-subject-btn" class="primary">Save & Remember</button>
+        <button id="close-large-modal-btn" style="background:#ef4444;" onclick="document.getElementById('large-subject-modal').classList.add('hidden');">Cancel</button>
       </div>
     </div>
   </div>
 
   <script type="module" src="main.js"></script>
-
 </body>
 </html>
