--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no">
   <meta name="theme-color" content="#0a0b14">
   <meta name="color-scheme" content="dark light">
 
   <title>Appana AI — Study Mentor</title>
-  <meta name="description"
-        content="Appana AI is a smart study mentor for Class 11 Commerce students, offering AI-powered explanations, quizzes, notes, and exam-focused guidance.">
+  <meta name="description" content="Appana AI is a smart study mentor for Class 11 Commerce students.">
 
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="menu.css">
@@ -32,21 +30,37 @@
   <script>
     const pdfjsLib = window['pdfjs-dist/build/pdf'];
     if (pdfjsLib) {
-      pdfjsLib.GlobalWorkerOptions.workerSrc =
-        'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
     }
   </script>
+
+  <style>
+    /* Safe Loading Screen to prevent Black Void */
+    #app-loader {
+      position: fixed; inset: 0; background: #000; z-index: 9999;
+      display: flex; justify-content: center; align-items: center; color: white;
+      font-family: sans-serif; flex-direction: column; gap: 10px;
+    }
+    .spinner {
+      width: 40px; height: 40px; border: 4px solid #333; border-top-color: #06b6d4;
+      border-radius: 50%; animation: spin 1s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
 </head>
 
 <body class="study-mode">
+
+  <div id="app-loader">
+    <div class="spinner"></div>
+    <div id="loader-text">Igniting Appana AI...</div>
+  </div>
 
   <div id="app" class="app-container">
 
     <aside id="section-menu" class="sidebar" aria-label="Main menu"></aside>
 
-    <main id="section-chat"
-          class="main-area active-panel"
-          aria-live="polite"></main>
+    <main id="section-chat" class="main-area active-panel" aria-live="polite"></main>
 
     <aside id="section-tools" class="right-panel" aria-label="Study tools"></aside>
 
@@ -66,25 +80,13 @@
 
   </div>
 
-  <!-- CUSTOM SUBJECT MODAL -->
-  <div id="custom-subject-modal"
-       class="global-modal hidden"
-       role="dialog"
-       aria-modal="true">
-
+  <div id="custom-subject-modal" class="global-modal hidden" role="dialog" aria-modal="true">
     <div class="modal-content">
       <h3 style="margin-top:0;">Add Custom Subject</h3>
-
       <input id="custom-sub-name" placeholder="Subject Name">
       <input type="file" id="custom-sub-file" style="margin-top:10px;">
-
-      <div id="custom-sub-status"
-           style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
-
-      <textarea id="custom-sub-text"
-                placeholder="Paste content here..."
-                style="height:100px; margin-top:5px;"></textarea>
-
+      <div id="custom-sub-status" style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
+      <textarea id="custom-sub-text" placeholder="Paste content here..." style="height:100px; margin-top:5px;"></textarea>
       <div style="display:flex; gap:10px; margin-top:15px;">
         <button id="save-subject-btn" class="primary">Save & Remember</button>
         <button id="close-modal-btn" style="background:#ef4444;">Cancel</button>
@@ -92,16 +94,12 @@
     </div>
   </div>
 
-  <!-- LARGE SUBJECT MODAL (same as menu.html) -->
   <div id="large-subject-modal" class="global-modal hidden" role="dialog" aria-modal="true">
     <div class="modal-content">
       <h3 style="margin-top:0;">Add Large Subject</h3>
-
       <input id="large-sub-name" placeholder="Subject Name">
       <input type="file" id="large-sub-file" style="margin-top:10px;">
-
       <div id="large-sub-status" style="font-size:12px; color:#d946ef; margin:5px 0;"></div>
-
       <div style="display:flex; gap:10px; margin-top:15px;">
         <button id="save-large-subject-btn" class="primary">Save & Remember</button>
         <button id="close-large-modal-btn" style="background:#ef4444;" onclick="document.getElementById('large-subject-modal').classList.add('hidden');">Cancel</button>
@@ -110,5 +108,17 @@
   </div>
 
   <script type="module" src="main.js"></script>
+
+  <script>
+    // Fallback if main.js crashes completely
+    setTimeout(() => {
+        const loader = document.getElementById("app-loader");
+        if(loader && loader.style.display !== "none") {
+             document.getElementById("loader-text").innerText = "Taking longer than usual...";
+             // Force remove after 8 seconds so user can at least see UI
+             setTimeout(() => loader.style.display = "none", 8000);
+        }
+    }, 5000);
+  </script>
 </body>
 </html>
